app/assets/stylesheets/components/_discussion.scss
.avatar {
  border-radius: 42px;
  margin-right: 10px;
}

.counters {
  color: $blue;

  @include font-size(12px);
}

#new_note {
  input[type=text], textarea {
    border: 1px solid $event-border;
    margin-bottom: 20px;
  }

  textarea {
    height: 150px;
    resize: none;
  }

  h4 {
    color: $blue;

    @include font-size(24px);
  }
}

.discussion {
  border-bottom: 1px solid $event-border;
  outline: none;
  padding-bottom: 7px;
  padding-top: 7px;

  &.active {
    background: $blue-gray;
  }
}

.discussions {
  .discussion-info {
    max-width: 180px;
    word-wrap: break-word;
  }
}

.discussion-icon {
  position: relative;

  svg {
    fill: $blue;
    height: 50px;
    width: 50px;
  }

  .comment-count {
    background: $new-count;
    border: 1px solid #fff;
    border-radius: 36px;
    color: #fff;
    display: inline-block;
    height: 18px;
    left: 50%;
    line-height: 18px;
    margin-left: 5px;
    position: absolute;
    text-align: center;
    top: 0;
    width: 18px;

    @include font-size(12px);
  }
}

.discussion-info, .comment-info {
  overflow: auto;

  h4 {
    color: $blue;
    font-weight: 300;
    margin-bottom: 5px;
    margin-top: 0;

    @include font-size(16px);
  }

  p {
    color: $text-color;
    margin: 0;

    @include font-size(12px);
  }
}

.discussion-urgent {
  margin-right: 15px;

  svg {
    height: 21px;
    width: 21px;
  }
}

.discussion-thread--desktop {
  svg {
    display: block;
    margin: 50px auto 0;
  }

  p {
    color: $dark-blue;
    font-weight: 300;
    margin-top: 25px;
    text-align: center;

    @include font-size(18px);
  }

  a {
    color: $green;
  }
}

.discussion-container {
  h4 {
    color: $blue;
    font-weight: normal;
    margin-top: 5px;
    word-wrap: break-word;

    & + p {
      color: $blue;
      font-weight: normal;
      margin-bottom: 15px;

      @include font-size(14px);
    }

    @include font-size(24px);
  }
  .discussion-info, .comment-info {
    margin-bottom: 20px;

    p {
      font-weight: 300;

      @include font-size(14px);
    }
  }

  .comment-info {
    background: #fff;
    border: 1px solid $event-border;
    border-radius: 5px;
    padding: 5px 10px;
  }

  .discussion-info {
    background: $blue-gray;
    border: 1px solid $event-border;
    border-radius: 5px;
    padding: 5px 10px;
  }

  .discussion-meta {
    color: $blue;

    span, em {
      font-weight: 500;

      @include font-size(12px);
    }
  }
}

#new_note {
  .counter { color: $green; }
  .red     { color: $red;   }
}

.new-comment {
  border-top: 1px solid $event-border;

  .comment_body {
    display: inline-block;
    margin-top: 15px;
    padding-left: 15px;
    vertical-align: middle;
    width: 84%;

    textarea {
      border-color: $event-border;
      border-radius: 8px;
      box-sizing: border-box;
      height: 85px;
      line-height: 24px;
      max-height: 85px;
      outline: none;
      padding: 6px 15px;
      resize: none;
      width: 100%;

      @include font-size(14px);
    }
  }

  input[type=submit] {
    background: none;
    border: none;
    color: $blue;
    font-weight: 400;
    margin-left: 10px;
    outline: none;
    vertical-align: -5px;
  }
}

@media (min-width: 768px) {
  .new-comment {
    .comment_body {
      padding-left: 0;
      width: 90%;

      textarea {
        height: 85px;
        max-height: none;
        resize: vertical;
      }
    }
  }
}

